<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name" translatable="false">Music Akinator</string>

    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="action_try_again">Give one more try</string>
    <string name="action_back_to_search">Back to the search</string>
    <string name="action_open_in">Open in</string>
    <string name="placeholder_input_listening">Listening…</string>
    <string name="error_no_browser_app">We couldn\'t find web browser app to open the URL. Please, download any and try again.</string>

    <!-- Search screen -->
    <string name="label_ask_me">Ask me</string>
    <string name="label_whos_singing">What\'s the song?</string>
    <string name="placeholder_whos_singing">Tap to enter text of the song</string>

    <!-- Loading screen -->
    <string name="label_try_to_find">Try to find</string>
    <string name="label_the_best_results">The best\nresults</string>

    <!-- Search Result screen -->
    <string name="label_preview_recent_results">Recent results</string>
    <string name="tab_song">Song</string>
    <string name="tab_lyrics">Lyrics</string>
    <string name="label_is_it_right_song">Is this right song?</string>

    <!-- Success screen -->
    <string name="title_success">WOO HOO!</string>
    <string name="label_success">I\'m exactly right</string>

    <!-- Failure screen -->
    <string name="title_failure">OOH…</string>
    <string name="label_failure">I don\'t know your song</string>
    <string name="interaction_failure">It must be very special</string>

    <!-- Retry screen -->
    <string name="title_retry">OOOPS…</string>
    <string name="label_retry">I made a mistake</string>
    <plurals name="interaction_retry">
        <item quantity="one">BUT I have %d more try</item>
        <item quantity="other">BUT I have %d more tries</item>
    </plurals>

    <!-- History -->
    <string name="title_history">History</string>
    <string name="title_history_empty">Seems like\nyou haven\'t search anything</string>
</resources>
