<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <FrameLayout
        android:id="@+id/ivCloseResults"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/iv_click_ripple_fix"
        android:padding="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            style="@style/ImageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="?attr/selectableItemBackgroundBorderless"
            app:srcCompat="@drawable/ic_close" />
    </FrameLayout>

    <TextView
        android:id="@+id/tvTitleResult"
        style="@style/TextView.Primary.Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:text="@string/title_failure"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivCloseResults" />

    <TextView
        android:id="@+id/tvSubtitleResult"
        style="@style/TextView.Secondary.Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_failure"
        android:textAlignment="center"
        android:textAllCaps="true"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleResult" />

    <FrameLayout
        android:id="@+id/ivMusicCoverContainer"
        android:layout_width="175dp"
        android:layout_height="175dp"
        android:layout_marginTop="56dp"
        android:foreground="@drawable/iv_rectangle_with_corners"
        android:padding="10dp"
        app:layout_constraintBottom_toTopOf="@+id/ctaBackToSearch"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitleResult"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/ivMusicCover"
            style="@style/ImageView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/test_image" />
    </FrameLayout>

    <TextView
        android:id="@+id/tvMusicName"
        style="@style/TextView.Primary.Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ivMusicCoverContainer"
        tools:text="Pendulum" />

    <TextView
        android:id="@+id/tvMusicAuthor"
        style="@style/TextView.Secondary.Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvMusicName"
        tools:text="Witchcraft" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ctaOpenIn"
        style="@style/Button.Secondary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:drawableEnd="@drawable/image_deezer"
        android:drawablePadding="6dp"
        android:minHeight="44dp"
        android:text="@string/action_open_in"
        android:textAllCaps="false"
        android:textSize="@dimen/tab_text_size"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/tvMusicName"
        app:layout_constraintTop_toBottomOf="@+id/tvMusicAuthor" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/ctaBackToSearch"
        style="@style/Button.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="24dp"
        android:minHeight="64dp"
        android:text="@string/action_back_to_search"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>