<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivAlbumPhoto"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/test_image" />

    <FrameLayout
        android:id="@+id/flPhotoSature"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/gradient_found_song"
        app:layout_constraintBottom_toTopOf="@+id/guideline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@id/ivAlbumPhoto" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivBack"
        style="@style/ImageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_marginTop="24dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_arrow_left" />

    <com.google.android.material.chip.ChipGroup
        android:id="@+id/chgTabs"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        app:checkedChip="@+id/btnSong"
        app:chipSpacingHorizontal="16dp"
        app:layout_constraintBottom_toBottomOf="@+id/ivBack"
        app:layout_constraintStart_toEndOf="@+id/ivBack"
        app:layout_constraintTop_toTopOf="@+id/ivBack"
        app:selectionRequired="true"
        app:singleLine="true"
        app:singleSelection="true">

        <com.google.android.material.chip.Chip
            android:id="@+id/btnSong"
            style="@style/Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/tab_song" />

        <com.google.android.material.chip.Chip
            android:id="@+id/btnLyrics"
            style="@style/Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/tab_lyrics" />
    </com.google.android.material.chip.ChipGroup>

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <TextView
        android:id="@+id/textView"
        style="@style/TextView.Primary.Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/flPhotoSature"
        tools:text="there will be a player" />

    <TextView
        style="@style/TextView.Secondary.Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="16dp"
        android:gravity="center"
        android:text="@string/label_is_it_right_song"
        android:textAllCaps="true"
        android:textSize="22sp"
        app:layout_constraintBottom_toTopOf="@+id/btnYes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNo"
        style="@style/Button.Secondary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:text="@string/action_no"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/btnYes"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnYes"
        style="@style/Button.Primary"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:padding="16dp"
        android:text="@string/action_yes"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/btnNo" />

    <TextView
        android:id="@+id/tvLyricsTitle"
        style="@style/TextView.Primary.Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/chgTabs"
        tools:text="Lyrics title" />

    <TextView
        android:id="@+id/tvLyricsSubtitle"
        style="@style/TextView.Secondary.Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textAllCaps="true"
        android:textSize="22sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLyricsTitle"
        tools:text="Lyrics subtitle" />

    <TextView
        android:id="@+id/tvLyricsText"
        style="@style/TextView.Secondary.Message"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:textAllCaps="false"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvLyricsSubtitle"
        tools:text="Lyrics subtitle" />

    <androidx.constraintlayout.widget.Group
        android:id="@+id/groupLyrics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:constraint_referenced_ids="tvLyricsTitle,tvLyricsSubtitle,tvLyricsText" />

</androidx.constraintlayout.widget.ConstraintLayout>

