<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/parentLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary">

    <FrameLayout
        android:id="@+id/flHistory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="6dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/iv_click_ripple_fix"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            style="@style/ImageView"
            android:layout_width="@dimen/icon_size"
            android:layout_height="@dimen/icon_size"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:padding="10dp"
            app:srcCompat="@drawable/ic_history" />
    </FrameLayout>

    <TextView
        android:id="@+id/tvAskMe"
        style="@style/TextView.Secondary.Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/label_ask_me"
        android:textAlignment="center"
        android:textAllCaps="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.35" />

    <TextView
        android:id="@+id/tvTitleResult"
        style="@style/TextView.Primary.Text"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/label_whos_singing"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAskMe" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilTypeSongEditText"
        style="@style/EditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="24dp"
        android:layout_marginBottom="16dp"
        app:boxStrokeWidth="0dp"
        app:boxStrokeWidthFocused="0dp"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvTitleResult"
        app:layout_constraintVertical_bias="0.0">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/typeSongEditText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusableInTouchMode="true"
            android:fontFamily="@font/maven_pro_medium"
            android:hint="@string/placeholder_whos_singing"
            android:imeOptions="actionSearch"
            android:inputType="text"
            android:minHeight="64dp"
            android:padding="16dp"
            android:paddingEnd="48dp"
            android:textColor="@color/inputTextColor"
            android:textColorHint="@color/placeholderTextColor"
            android:textCursorDrawable="@drawable/cursor"
            android:textSize="@dimen/secondary_text_size" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivVoiceInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:padding="20dp"
        app:layout_constraintBottom_toBottomOf="@+id/tilTypeSongEditText"
        app:layout_constraintEnd_toEndOf="@+id/tilTypeSongEditText"
        app:layout_constraintTop_toTopOf="@+id/tilTypeSongEditText"
        app:srcCompat="@drawable/ic_micro" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/ivClearInput"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="0dp"
        android:background="?attr/selectableItemBackgroundBorderless"
        android:padding="20dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="@+id/tilTypeSongEditText"
        app:layout_constraintEnd_toEndOf="@+id/tilTypeSongEditText"
        app:layout_constraintTop_toTopOf="@+id/tilTypeSongEditText"
        app:srcCompat="@drawable/ic_clean" />
</androidx.constraintlayout.widget.ConstraintLayout>

